# keyboard-relay-app

./: .gitignore  CMakeLists.txt  README.md
daemon/: CHANGELOG.md  CMakeLists.txt  notes.md
daemon/header/: constants.h  eventHandler.h  eventQueue.h  jsonHandler.h  types.h
daemon/src/: eventHandler.c  eventHandlerWin.c  eventQueue.c  jsonHandler.c  main.c
shared/remaps/: remap-example.json
